--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,10 @@
     {
       "path": "./tsconfig.spec.json"
     }
-]
+  ],
+  "compilerOptions": {
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "experimentalDecorators": true,
+  }
 }
